[tool.poetry]
name = "web-hw-13"
version = "0.1.0"
description = ""
authors = ["Maksius93 <m.g.fursa@gmail.com>"]
readme = "README.md"
packages = [{include = "web_hw_13"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.101.1"}
fastapi-mail = "^1.4.1"
sqlalchemy = "^2.0.20"
alembic = "^1.11.3"
asyncpg = "^0.28.0"
fastapi-jwt = "^0.1.12"
libgravatar = "^1.0.4"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
fastapi-limiter = "^0.1.5"
cloudinary = "^1.34.0"
section = "^2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
